k8s/manifest.yaml
---
# Source: chart/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
  annotations:
    app: sean-home
  name: sean-home
  clusterName: raspberrypi
---
# Source: chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sean-home-svc
  namespace: sean-home
  labels:
    app: sean-home
spec:
  ports:
  - name: http
    port: 8080
    nodePort: 30100
  selector:
    app: sean-home
  type: NodePort
---
# Source: chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sean-home
  namespace: sean-home
  labels:
    app: sean-home
  annotations:
    app: sean-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sean-home
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: sean-home
      namespace: sean-home
      labels:
        app: sean-home
      annotations:
        app: sean-home
    spec:
      containers:
      - name: sean-home
        image: smarman/sean-home:8780ee270b7a44f38d0973b3c88f67185797e8a8
        command: ["/go/src/sean-home/bin/run.sh"]
        imagePullPolicy: Always
          #livenessProbe:
          #  httpGet:
          #    path: /about
          #    port: 8080
          #  initialDelaySeconds: 5
          #  periodSeconds: 60
        ports:
        - containerPort: 8080
        stdin: true
        tty: true
        volumeMounts:
      restartPolicy: Always
      volumes:
---
# Source: chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sean-home-ing
  namespace: sean-home
spec:
    rules:
    - host: sean-home.local.sean-home.xyz
      http:
        paths:
        - backend:
            service:
              name: sean-home-svc
              port:
                name: http
          path: /
          pathType: ImplementationSpecific
---
